tests/paczka1/small_fuzzy/17892782.err
Error in line 1: fM9oJvu S926 31,2
Error in line 5: kyN S926 44,2
Error in line 9: RF4OuBfMIq6 A233 75,2
